# backtest

./: .gitignore  pyproject.toml
examples/: basic_usage.py
src/backtest/: backtest.py  feature_builder.py  strategy_classes.py  yf_helper.py
tests/: SPY_1d.csv  SPY_1h.csv  test_backtest.py
