[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BackTest"
version = "0.1.0"
description = "A backtesting library for market strategies"
authors = [{name = "Deni Rakovic", email = "deni.rakovic23@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.2.3",
    "numpy>=2.2.2",
    "yfinance>=0.2.52",
    "numba>=0.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    #"black>=22.0",
]